# dealerfinder

./: .dockerignore  .env.example  .gitignore  README.md  build_cities.py  conftest.py  dev_notes.md  manage.py  pyproject.toml  pytest.ini
apps/contact/: admin.py  apps.py  forms.py  middleware.py  models.py  services.py  urls.py  views.py
apps/core/: middleware.py  urls.py  views.py
apps/dealers/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
apps/users/: admin.py  middleware.py  models.py  urls.py  views.py
common/: exceptions.py  http.py  redis.py
common/services/: feature_flags.py  rate_limiter.py
config/: celery.py  context_processors.py  env.py  settings.py  urls.py
docker/: Dockerfile  celery-entrypoint.sh  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  nginx.conf
docs/: LICENSE.md  _checklist_AI_integration.md  _checklist_AI_shortlist.md  ai_architecture.md  checklist_AI_shortlist.md  checklist_v1.md  checklist_v2-1.md  checklist_v2.md  data_model.md  dealerfinder_ai_integration_v2.md  dealerfinder_v1.md  legal_pages.md  request_flow.md  system_overview+v1.md  testing.md
integrations/: ai_client.py  email_notifications.py  google_oauth.py  telegram.py  turnstile.py
static/js/: base.js  (+9 more)
templates/: 403.html  404.html  500.html  about.html  base.html  contact.html  home.html
tests/: tests_contact_view.py  tests_dealer_service.py  tests_delete_account_view.py  tests_delete_user_account.py  tests_frontend_guards.py  tests_geocoding.py  tests_middleware.py  tests_oauth_flow.py
utils/: build_cities.py  http.py  logging.py
(+80 files in other folders)
