[project]
name = "dealerfinder"
version = "0.1.0"
description = ""
authors = [
    { name = "maxx", email = "m.petrykin@gmx.de" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django>=6.0.3,<7.0.0",
    "requests>=2.32.5,<3.0.0",
    "psycopg>=3.2,<4.0",
    "django-allauth[socialaccount] (>=65.15.0,<66.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
